kubernetes-network/web-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: web
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8888
