kubernetes-network/web-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc-lb
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8888
